--- a/src/index.css
+++ b/src/index.css
@@ -114,5 +114,11 @@
 }
 
 body {
-  font-family: "Netflix Sans";
+  @apply font-sans;
+}
+
+@layer components {
+  .container {
+    @apply mx-auto flex max-w-screen-xl gap-6 px-6 py-10 sm:gap-8;
+  }
 }
